# ohhPlayer

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  audio.rs  decoder.rs  logger.rs  main.rs  settings.rs  ui_state.rs
src/audio/: callback.rs  decode.rs  mod.rs  types.rs
src/decoder/: decode.rs  mod.rs  types.rs
src/ui_state/: mod.rs  opacity.rs  time.rs
ui/: appwindow.slint  center-button.slint  controls-fullscreen-button.slint  controls-play-button.slint  controls-scale-button.slint  controls-seek-bar.slint  controls-skip-button.slint  controls-speed-button.slint  controls-speed-popup.slint  controls-volume.slint  controls.slint  keyboard-help.slint  logs-overlay.slint  osd.slint  recent-files.slint  sleep-timer-popup.slint  top-menu.slint  video-layer.slint  window-keyboard.slint
