[package]
name = "ohhplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1"
ffmpeg-sys-next = "8"
sdl2 = "0.36"
libc = "0.2"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[build-dependencies]
slint-build = "1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Optimize across all crates
strip = true        # Strip debug symbols from binary
panic = "abort"     # Save size by aborting on panic
